increased PermGen space for tests